<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menuitem_durations">Durations Report</string>
    <string name="menuitem_about">About TaskTimer</string>
    <string name="menuitem_generate">Generate Test Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit selected task</string>
    <string name="delete_button_description">Button to delete selected task</string>
    <string name="save_button">Save</string>
    <string name="save_button_description">Button to save task</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_description_hint">Task Description</string>
    <string name="sortorder_hint">Sort Order</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.
        \n\nTasks with lower sort orders will be placed higher up the list.
        Tasks with the same sort order will be sorted alphabetically.\n
        \n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n
        Each task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delediag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting this will also delete all the timings data associated with task id: %1$d, %2$s</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you wish to abandon changes and, or continue editing?</string>
    <string name="canelEditDiag_positive_caption">Abandon Changes</string>
    <string name="cancelEditDiag_negative_caption">Continue Editing</string>
    <string name="about_copyright">Copyrght © 2020 learnprogramming.academy</string>
    <string name="about_weblink">Instructions are available at www.learnprogramming.academy</string>
    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>Analog clock</b> at openclipart.org by <b>Anonymus</b></string>
    <string name="timing_message">Currently timing: %1$s</string>
</resources>
